email id corrected

--- a/work.html
+++ b/work.html
@@ -215,7 +215,7 @@
           <div style="position: relative ;">
               <img style=" width: 100%; max-width: 40px ; position: absolute; margin: auto; padding-left: 10px; padding-top: 2px;"
                   src="images/mail.png" alt="mail-box">
-              <a class="btn-ctc" href="mailto:patilmitalii99@email.com">CONTACT ME</a>
+              <a class="btn-ctc" href="mailto:patilmitali99@gmail.com">CONTACT ME</a>
           </div>
       </div>
   </div>
