--- a/work.html
+++ b/work.html
@@ -126,7 +126,7 @@
                 which will be validated to pass or fail and further archived as feed generated.
               </p>
               <p class="work-btn" style="margin:0 auto 0 auto;">
-                <a href="" style="color:white; text-decoration:none; font-weight: bold;">View on GitHub</a>
+                <a href="https://github.com/pgm0899/CitiBridge" style="color:white; text-decoration:none; font-weight: bold;">View on GitHub</a>
               </p>
             </div>
           </div>
@@ -153,7 +153,7 @@
                 needs and requirements of the institution using various deployment tools available.
               </p>
               <p class="work-btn" style="margin:0 auto 0 auto;">
-                <a href="" style="color:white; text-decoration:none; font-weight: bold;">View on IEEE</a>
+                <a href="https://ieeexplore.ieee.org/document/9776387" style="color:white; text-decoration:none; font-weight: bold;">View on IEEE</a>
               </p>
             </div>
           </div>
@@ -168,7 +168,7 @@
                 cloud platform.
               </p>
               <p class="work-btn" style="margin:0 auto 0 auto;">
-                <a href="" style="color:white; text-decoration:none; font-weight: bold;">View on GitHub</a>
+                <a href="https://github.com/mitalipatil99/BreakTime" style="color:white; text-decoration:none; font-weight: bold;">View on GitHub</a>
               </p>
             </div>
           </div>
